--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "author": "Michał Kalinowski",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2"
+  },
+  "scripts": {
+    "start": "node main.js"
   }
 }
